--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
-*
-!Test/*
+parser
+/Code/*
+!/Code/*.c
+!/Code/*.h
+/Code/lex.yy.c
+/Code/syntax.tab.*
+!/Code/lexical.l
+!/Code/syntax.y
+!/Code/Makefile
