Modify type of handlers, add ir, operand and label add simple translation of binary operation expression.

--- a/Code/Makefile
+++ b/Code/Makefile
@@ -76,4 +76,4 @@ runall: parser $(TEST_OUT)
 		cat $$case.out; \
 	done;
 run: parser
-	@./parser ../Test/temp.cmm
+	@./parser ../Test/lab3-mine1.cmm
