Add pseudo Type: offset. Modify the way to print operands.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 parser
-/Code/*
-!/Code/*.c
-!/Code/*.h
-/Code/lex.yy.c
-/Code/syntax.tab.*
-!/Code/lexical.l
-!/Code/syntax.y
-!/Code/Makefile
+tmp/
+Code/*
+!Code/*.c
+!Code/*.h
+Code/lex.yy.c
+Code/syntax.tab.*
+!Code/lexical.l
+!Code/syntax.y
+!Code/Makefile
